need to fix alignment

--- a/WebVisualizations/style.css
+++ b/WebVisualizations/style.css
@@ -1,15 +1,28 @@
 header {
-    background: white;
-    padding: 20px;
+    background:whitesmoke;
+    padding: 30px;
     font-size: 35px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: rgb(57, 207, 192);
     font-weight: bolder;
 }
 
+.table-responsive-md {
+    margin-left: 50px;
+}
+.container-data{
+    width:100%;
+}
+
 
 h1 {
     color: rgb(57, 207, 192);
+    text-align: center;
+}
+
+h2 {
+    color: whitesmoke;
+    text-align: center;
 }
 
 .nav-item {
@@ -21,11 +34,16 @@ h1 {
     background-color: black;
     align-items: center;
     padding: 50px;
-    margin: 20px;
-  
-    border: 10px solid slategray
+    margin-left: 20px;
+    position: static;
+    border: 20px solid slategray
+    
+    
 }
 
+image {
+    align-items: center;
+}
 
 
 /* .dropbtn {
@@ -52,18 +70,19 @@ h1 {
 
 .container {
     padding: 30px 30px;
-    background-color: white;
+    background-color: black;
 }
 
 
 .navbar-link {
     display: inline-block;
     padding: 15px;
+    margin-top: 25px;
     margin-right: 10px;
     margin-left: 10px;
     background-color: rgb(57, 207, 192);
     color: whitesmoke;
-    border-radius: 3px;
+    border-radius: 5px;
     font-size: 30px;
     font-weight: bolder;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -81,14 +100,20 @@ body {
 }
 
 p {
-    color: rgb(100, 98, 98);
+    margin-left: 50px;
+    color: rgb(57, 207, 192);
 }
 
 .header-three {
     color: rgb(57, 207, 192);
-    text-align: center;
+    text-align: center !important;
 }
 
-/* @media (max-width: 480px) {
+@media (max-width: 480px) {
+/* put only images in here */
+    .container-data{
+        width:95% !important;
+    }
     
-} */
+}
+
